# pysz_gal

./: .gitignore  .memo.txt.swp  LICENSE  MANIFEST.in  README.md  dndz_example.txt  setup.cfg  usage.ipynb
pysz_gal/: .pysz_z.py.swp  pysz_gal.py
pysz_gal.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pysz_gal/source/: Makefile  calc_cl.f90  da.f90  global_var.f90  hod.f90  linearpk_z.f90  mf_module.f90  mf_tinker.f90  qgaus2_n20.f90  szgal_functions.f90
