[metadata]
name = pysz_gal
version = attr: pysz_gal.__version__
url = https://github.com/ryumakiya/pysz_gal
author = Ryu Makiya
author_email = ryu.makiya@gmail.com
license_file = LICENSE
description = pysz_gal: python wrapper of fastsz code originally devoloped by E. Komatsu
long_description = file: README.md

[options]
zip_safe = False
packages = find:
install_requires =
  classy
  numpy
include_package_data = True
